<resources>
    <string name="app_name">CSC207Simulator</string>
    <string name="language_message">Select your preferred language</string>
    <string name="play_game_setup">Play Game Now!</string>
    <string name="background_message_setup">Select your preferred background</string>
    <string name="background_light_setup">Light Mode</string>
    <string name="background_dark_setup">Dark Mode</string>
    <string name="language_chinese">中文</string>
    <string name="language_english">English</string>
    <string name="game1_instructions">In this game, you will need to click as many books displays on the screen as possible in the limited time. The more books you click, the higher score you can get. </string>
    <string name="game2_num_you_guess">Number you guess</string>
    <string name="game2_welcome">Welcome to trade knowledge game</string>
    <string name="game2_instructions">In this game, you need to choose one person to trade, and you can trade five times. Each person is either a professor or a ta, you will need to guess a number from 0 or 1. If your guess is correct, then you can trade with the person you choose, then you need to enter the number of the knowledge you want to trade. Remember: professor and ta has different rules of knowledge trade.</string>
    <string name="game2_prof_explanation">The person here is a professor. After you give your own knowledge to this person, if his own knowledge is third times than yours, than the trade is successful</string>
    <string name="game2_num_you_trade">Number you trade</string>
    <string name="game2_ta_insctructions">The person here is a ta. After you give your own knowledge to this person, if his own knowledge is twice than yours, than the trade is successful</string>
    <string name="got_it">Got it!</string>
    <string name="time_out">Time is UP!</string>
    <string name="go_to_game2">Go to Next Game</string>
    <string name="tradeperson">Select the person you want to trade</string>
    <string name="begin">BEGIN</string>
    <string name="start">start</string>
    <string name="click_to_see_final_result">Click to see final result</string>
    <string name="knowledge">Knowledge</string>
    <string name="game3_instructions">You study too hard that you fall asleep. When you wake up, you find yourself stuck in a dundeon. This is the dungeon of knowledge. There is a pad of hidden blocks in next room. There might be chests of knowledge under the block. But you can\'t just flip them, you have to use equipment to open the block. Otherwise, there will be nothing in the chest. When there is not chest under the block, either a card will display that tells you how many chests are hiding around it, or nothing is there excpet the floor. Goodluck, the challenger! Remember, your equipments are not infinite! You only have</string>
    <string name="equipment">magical equipment</string>
    <string name="game3_start">Start your advanture！</string>
    <string name="Finaldisplay">Congratulation! you have finsihed your project! You current score now is</string>
    <string name="Beginnerdiffculty">Beginner</string>
    <string name="Intermediatedifficulty">Intermediate</string>
    <string name="Hardcoredifficulty">Hardcore</string>
    <string name="choosedifficulty">Choose the difficulty!</string>
    <string name="replay">Replay!</string>
    <string name="finaldisplayhighestscore">Your hgihest score is</string>
    <string name="finalperformance">"Your performance score is "</string>
    <string name="skip_to_next">Skip to Next</string>
    <string name="game2_bonus_game_instruction"> Unluckily, you failed to trade with either all professors or ta. Then, you have another chance now!!! Do you remember your exact knowledge now? If you remember it and then you can earn extra knowledge. </string>
    <string name="game2_bonus_hint">score_you_remember</string>
    <string name="game1_resume">Resume</string>
    <string name="game2_Knowledge">knowledge</string>
    <string name="Logout">Logout</string>
    <string name="game2_bonus_check">check</string>
    <string name="game2_guess">person_you_guess</string>
    <string name="exchange">Exchange</string>
    <string name="leave">Leave</string>
    <string name="Secretroomintro">Welcome to the SecretRoom! Exchange your secret books found in the chest with score here! Number of secret books you have is</string>
    <string name="scoreboardperformancebutton">Performance</string>
    <string name="scoreboardhighestscorebutton">Highest Score</string>
    <string name="scoreboardknowledgebutton">Knowledge</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="skipgame3">After several attempts, you manage to open the door and leaves. But you still have a chance to go back and dig the treasures. What do you want to do now?</string>
    <string name="Goback">Go back</string>
    <string name="NextGame">next game</string>

</resources>
