<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="419dp"
        app:srcCompat="@drawable/skiproom" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:text="@string/skipgame3"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/gobackbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Goback" />

    <Button
        android:id="@+id/Leaveskipbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leave" />
</LinearLayout>