<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="match_parent"
        android:layout_height="387dp"
        app:srcCompat="@drawable/secretroom" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/Secretroomintro"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/Numberofsecret"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Button
        android:id="@+id/Exchangebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exchange" />

    <Button
        android:id="@+id/LeaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leave" />

</LinearLayout>